<resources>
    <string name="app_name">The Janky Quiz</string>
    <string name="btnBegin">Begin</string>
    <string name="next">Next</string>
    <string name="question">Question:</string>
    <string name="_0_10">0/10</string>
    <string name="def">DEF</string>
    <string name="points">Points:</string>
    <string name="restart">Restart</string>
    <string name="exit">Exit</string>
    <string name="personal_best">Personal Best:</string>
    <string name="game_over">GAME OVER</string>
    <string name="_10s">10s</string>
</resources>